--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "material-dashboard-react",
+  "name": "patrick-allan-exemplos",
   "version": "1.10.0",
-  "description": "Material Dashboard React. Coded by Creative Tim",
+  "description": "Exemplos de atividades React",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
@@ -35,12 +35,12 @@
     "url": "git+https://github.com/creativetimofficial/material-dashboard-react.git"
   },
   "keywords": [],
-  "author": "Creative Tim <hello@creative-tim.com> (https://www.creative-tim.com/)",
+  "author": "Patrick Allan <prkallan1337@gmail.com> (https://github.com/patrick-allan)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/creativetimofficial/material-dashboard-react/issues"
+    "url": "https://github.com/patrick-allan)"
   },
-  "homepage": "https://creativetimofficial.github.io/material-dashboard-react/#/dashboard",
+  "homepage": "https://github.com/patrick-allan/exemplos",
   "optionalDependencies": {
     "@babel/core": "7.14.0",
     "typescript": "4.2.4"
