--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "chartist": "^0.10.1",
     "classnames": "2.3.1",
